# pc_cat

./: pyproject.toml
pc/first/: models.py  urls.py  views.py
pc/first/migrations/: 0001_initial.py
pc/first/templates/first/: index.html
pc/pc/: settings.py  urls.py
